kubernetes/workload-reachability/simple-deployment-with-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workload-reachability-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: workload-reachability-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: awesome-workload
        image: gophernet/netcat
        command: ["/bin/sh", "-c"]
        args: ["while true; do echo -e \"HTTP/1.1 200 OK\r\nContent-Type: text/html\r\n\r\nHello from Pod ${POD_IP}!\" | nc -l -p 8080; done"]
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
        ports:
        - name: greeting
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: workload-reachability-example
spec:
  type: LoadBalancer
  selector:
    app: hello-app
  ports:
  - name: greeting
    port: 8080
