kubernetes/workload-reachability/deployments-with-ingress-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notesmanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-search
  namespace: notesmanager
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notes-search
  template:
    metadata:
      labels:
        app: notes-search
    spec:
      containers:
        - name: notes-search-service
          image: gophernet/netcat
          command: ["/bin/sh", "-c"]
          args: ["while true; do echo -e \"HTTP/1.1 200 OK\r\nContent-Type: text/html\r\n\r\n*Busy note searching noises*\" | nc -l -p 8080; done"]
          resources:
            limits: 
              cpu: "100m"
              memory: "128Mi"
          ports: 
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
          readinessProbe:
            httpGet:
              port: http
            initialDelaySeconds: 2
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: notes-search
  namespace: notesmanager
spec:
  selector:
    app: notes-search
  ports:
    - name: http
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notesmanager-services
  namespace: notesmanager
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: api.notesmanager.io
      http:
        paths:
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: notes-search
                port:
                  name: http
